2010-07-06 Holger Vogt
 * defines.h: void fcn prototype instead of sighandler_t 
   for MINGW, CYGWIN and MSC
 * src/spectrum: update of script with explanations
 * b4soild.c: debug warnings removed 

2010-07-05  Robert Larice
 * src/xspice/cmpp/writ_ifs.c :
        add initialization of the struct IFdevice.flags element to the
        generated code.  We initialize to 0, which is what the C compiler
        used as default so far.

2010-07-05  Robert Larice
 * src/xspice/icm/analog/d_dt/cfunc.mod ,
 * src/xspice/icm/analog/hyst/cfunc.mod ,
 * src/xspice/icm/analog/int/cfunc.mod ,
 * src/xspice/icm/analog/oneshot/cfunc.mod ,
 * src/xspice/icm/analog/s_xfer/cfunc.mod ,
 * src/xspice/icm/analog/sine/cfunc.mod ,
 * src/xspice/icm/analog/slew/cfunc.mod ,
 * src/xspice/icm/analog/square/cfunc.mod ,
 * src/xspice/icm/analog/triangle/cfunc.mod ,
 * src/xspice/icm/digital/adc_bridge/cfunc.mod ,
 * src/xspice/icm/digital/d_osc/cfunc.mod ,
 * src/xspice/icm/digital/dac_bridge/cfunc.mod ,
 * src/xspice/icm/xtradev/capacitor/cfunc.mod ,
 * src/xspice/icm/xtradev/core/cfunc.mod ,
 * src/xspice/icm/xtradev/inductor/cfunc.mod ,
 * src/xspice/icm/xtradev/lcouple/cfunc.mod ,
 * src/xspice/icm/xtraevt/real_delay/cfunc.mod ,
 * src/xspice/icm/xtraevt/real_to_v/cfunc.mod :
        cast the return values of the void* returning functions
          cm_event_get_ptr() and cm_analog_get_ptr()

2010-07-04  Robert Larice
 * src/frontend/evaluate.c : use void* instead of char* for anonymous data
 * src/frontend/outitf.c : use a rescasted parameter
 * src/frontend/outitf.h : make use of the existing enum GRIDTYPE
 * src/frontend/variable.c : add missing casts
 * src/spicelib/analysis/ckti2nod.c : drop an useless cast
 * src/include/hlpdefs.h : use the struct name instead of the typedef name

2010-07-04  Robert Larice
 * src/maths/sparse/spdefs.h :
        fix the type of an ancient anonymous pointer from char* to void*

2010-07-04  Robert Larice
 * src/include/defines.h :