@@ -6,11 +6,10 @@ Author: 1985 Thomas L. Quarles
 #ifndef TF
 #define TF
 
+#include "typedefs.h"
 #include "jobdefs.h"
 #include "tskdefs.h"
 #include "cktdefs.h"
-
-typedef struct TFan TFan;
 
 
     /* TFdefs.h - defs for transfer function analyses */
